// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Sidebar 1`] = `
<div
  className="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse nav"
  onKeyDown={[Function]}
>
  <div
    className="sidebar-sticky pt-3"
  >
    <ul
      className="nav flex-column"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current="page"
          className="nav-link active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
            />
            <polyline
              points="9 22 9 12 15 12 15 22"
            />
          </svg>
          Accueil
        </a>
        <a
          aria-current={null}
          className="nav-link"
          href="/intro"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="20"
              y2="10"
            />
            <line
              x1="18"
              x2="18"
              y1="20"
              y2="4"
            />
            <line
              x1="6"
              x2="6"
              y1="20"
              y2="16"
            />
          </svg>
          Introduction
        </a>
      </li>
    </ul>
    <div>
      <h6
        className="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
      >
        <span>
          Rapports
        </span>
      </h6>
      <ul
        className="nav flex-column"
      >
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/wappalyzer"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="20"
                y2="10"
              />
              <line
                x1="18"
                x2="18"
                y1="20"
                y2="4"
              />
              <line
                x1="6"
                x2="6"
                y1="20"
                y2="16"
              />
            </svg>
            Technologies
          </a>
        </li>
      </ul>
    </div>
    <h6
      className="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
    >
      <span>
        Urls
      </span>
    </h6>
    <ul
      className="nav flex-column"
    />
  </div>
</div>
`;

exports[`Should render full Sidebar 1`] = `
<div
  className="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse nav"
  onKeyDown={[Function]}
>
  <div
    className="sidebar-sticky pt-3"
  >
    <ul
      className="nav flex-column"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current="page"
          className="nav-link active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
            />
            <polyline
              points="9 22 9 12 15 12 15 22"
            />
          </svg>
          Accueil
        </a>
        <a
          aria-current={null}
          className="nav-link"
          href="/intro"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="20"
              y2="10"
            />
            <line
              x1="18"
              x2="18"
              y1="20"
              y2="4"
            />
            <line
              x1="6"
              x2="6"
              y1="20"
              y2="16"
            />
          </svg>
          Introduction
        </a>
      </li>
    </ul>
    <div>
      <h6
        className="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
      >
        <span>
          Rapports
        </span>
      </h6>
      <ul
        className="nav flex-column"
      >
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/wappalyzer"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="20"
                y2="10"
              />
              <line
                x1="18"
                x2="18"
                y1="20"
                y2="4"
              />
              <line
                x1="6"
                x2="6"
                y1="20"
                y2="16"
              />
            </svg>
            Technologies
          </a>
        </li>
      </ul>
    </div>
    <h6
      className="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
    >
      <span>
        Urls
      </span>
    </h6>
    <ul
      className="nav flex-column"
    >
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://acceslibre.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          acceslibre.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://adock.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          adock.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://aides-territoires.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          aides-territoires.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://api.camino.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          api.camino.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://api.dossierfacile.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          api.dossierfacile.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://api.resorption-bidonvilles.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          api.resorption-bidonvilles.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://api.trackdechets.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          api.trackdechets.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://bo-v2.dossierfacile.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          bo-v2.dossierfacile.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://bo.dossierfacile.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          bo.dossierfacile.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://camino.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          camino.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://carbure.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          carbure.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://chauffage-urbain.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          chauffage-urbain.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://locataire.dossierfacile.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          locataire.dossierfacile.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://mobilic.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          mobilic.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://partaj.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          partaj.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://potentiel.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          potentiel.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://proprietaire.dossierfacile.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          proprietaire.dossierfacile.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://resorption-bidonvilles.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          resorption-bidonvilles.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://trackdechets.beta.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          trackdechets.beta.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://transport.data.gouv.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          transport.data.gouv.fr
        </a>
      </li>
      <li
        className="nav-item"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/url/https://www.dossierfacile.fr"
          onClick={[Function]}
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <line
              x1="21"
              x2="16.65"
              y1="21"
              y2="16.65"
            />
          </svg>
          www.dossierfacile.fr
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tools config Should render Sidebar with limited tools 1`] = `
Array [
  <div
    className="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse nav"
    onKeyDown={[Function]}
  >
    <div
      className="sidebar-sticky pt-3"
    >
      <ul
        className="nav flex-column"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
              <polyline
                points="9 22 9 12 15 12 15 22"
              />
            </svg>
            Accueil
          </a>
          <a
            aria-current={null}
            className="nav-link"
            href="/intro"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="20"
                y2="10"
              />
              <line
                x1="18"
                x2="18"
                y1="20"
                y2="4"
              />
              <line
                x1="6"
                x2="6"
                y1="20"
                y2="16"
              />
            </svg>
            Introduction
          </a>
        </li>
      </ul>
      <h6
        className="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
      >
        <span>
          Urls
        </span>
      </h6>
      <ul
        className="nav flex-column"
      >
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://acceslibre.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            acceslibre.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://adock.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            adock.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://aides-territoires.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            aides-territoires.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://api.camino.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            api.camino.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://api.dossierfacile.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            api.dossierfacile.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://api.resorption-bidonvilles.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            api.resorption-bidonvilles.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://api.trackdechets.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            api.trackdechets.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://bo-v2.dossierfacile.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            bo-v2.dossierfacile.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://bo.dossierfacile.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            bo.dossierfacile.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://camino.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            camino.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://carbure.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            carbure.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://chauffage-urbain.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            chauffage-urbain.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://locataire.dossierfacile.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            locataire.dossierfacile.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://mobilic.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            mobilic.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://partaj.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            partaj.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://potentiel.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            potentiel.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://proprietaire.dossierfacile.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            proprietaire.dossierfacile.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://resorption-bidonvilles.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            resorption-bidonvilles.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://trackdechets.beta.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            trackdechets.beta.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://transport.data.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            transport.data.gouv.fr
          </a>
        </li>
        <li
          className="nav-item"
          style={
            Object {
              "whiteSpace": "pre",
            }
          }
        >
          <a
            aria-current={null}
            className="nav-link"
            href="/url/https://www.dossierfacile.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "marginRight": 5,
                  "marginTop": -5,
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
            www.dossierfacile.fr
          </a>
        </li>
      </ul>
    </div>
  </div>,
  " ",
]
`;
